fixed extra space around cards on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @layer components {
   .card {
-    @apply bg-gray-300 w-96  md:w-80  lg:w-96  shadow-md rounded-md overflow-hidden h-96;
+    @apply bg-gray-300 w-full  md:w-80  lg:w-96  shadow-md rounded-md overflow-hidden h-96;
   }
   .category {
     @apply font-bold text-[#E60012] p-4;
